--- a/Schedule/src/main/resources/application.properties
+++ b/Schedule/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://47.94.140.6:3306/jdbc?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://ip:3306/jdbc?useUnicode=true&characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
