--- a/Schedule/src/main/resources/application.properties
+++ b/Schedule/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:mysql://ip:3306/jdbc?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://ip:3306/jdbc?characterEncoding=utf8
 spring.datasource.username=root
 spring.datasource.password=123
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
@@ -16,6 +16,11 @@ spring.datasource.tomcat.time-between-eviction-runs-millis=10000
 spring.datasource.tomcat.min-evictable-idle-time-millis=120000
 spring.datasource.tomcat.remove-abandoned=true
 spring.datasource.tomcat.remove-abandoned-timeout=60
+
+####date format
+spring.jackson.date-format=yyyy-MM-dd
+spring.jackson.time-zone=GMT+8
+####
 
 ####
 #thymeleaf start
