--- a/Schedule/pom.xml
+++ b/Schedule/pom.xml
@@ -68,6 +68,12 @@
             <artifactId>junit</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.jexcelapi</groupId> 
+            <artifactId>jxl</artifactId> 
+            <version>2.6.12</version> 
+        </dependency>
+
     </dependencies>
 
     <build>
